--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "multer": "^1.4.5-lts.2",
     "nodemailer": "^6.10.0",
     "nodemon": "^3.1.9",
+    "superagent": "^10.2.3",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1"
   },
@@ -35,6 +36,6 @@
     "eslint": "^9.33.0",
     "globals": "^16.3.0",
     "jest": "^29.7.0",
-    "supertest": "^7.1.1"
+    "supertest": "^7.1.4"
   }
 }
