--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/swagger-ui-express": "^4.1.8",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^3.0.2",
+    "brace-expansion": "^2.0.2",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "ejs": "^3.1.10",
